--- a/config-feedforward.cfg
+++ b/config-feedforward.cfg
@@ -10,6 +10,7 @@ activation_default      = relu
 activation_mutate_rate  = 0.05
 activation_options      = sigmoid softplus tanh
 
+# More options for activation functions
 #abs clamped cube exp gauss hat identity inv log relu sigmoid sin softplus square tanh
 
 # node aggregation options
